# Protein-Benchmark-Framework-Dissertation

./: .gitignore  FIXES_LOG.md  README.md  embeddings_verify.sh  embeddings_verify_serial.sh  generate_embeddings_dependencies.sh  generate_embeddings_fasta.py  generate_embeddings_ppi.sh  generate_embeddings_prepare_data.sh  generate_embeddings_run_all.sh  generate_embeddings_run_all_serial.sh  generate_embeddings_sequence.sh  generate_embeddings_structure.sh  generate_embeddings_text.sh  reproduce_embeddings_retrain_eval.sh  reproduce_embeddings_retrain_eval_serial.sh  reproduce_eval_only.sh  reproduce_retrain_eval.sh  verify_csv.sh  verify_embeddings.py  verify_splits.py
benchmark_builders/contemporary_cafa/: README.md  REPORT.md  pyproject.toml
benchmark_builders/contemporary_cafa/src/cafa_benchmark_builder/: __init__.py  builder.py  cli.py  config.py  goa.py  io_utils.py  models.py  official_targets.py  ontology.py  parsers.py  snapshot.py  training_annotations.py
benchmark_builders/contemporary_cafa/tests/: test_acquisition_helpers.py  test_builder_smoke.py  test_historical_and_diagnostics.py  test_temporal_contract.py
benchmark_builders/contemporary_cafa/tests/fixtures/: go-mini.obo  goa-t0.gaf  goa-t1.gaf  uniprot-t0.fasta  uniprot-t1.fasta
benchmark_builders/homology_cluster/: AUDIT_FIXES.md  METHODOLOGY.md  README.md  REPORT.md  attrition_override.template.json  attrition_policy.template.json  frozen_input_manifest.template.json  pilot_approval.template.json  pilot_measurement_evidence.template.json  pyproject.toml
benchmark_builders/homology_cluster/src/homology_cluster_benchmark/: __init__.py  attrition.py  authorization.py  cli.py  cluster_cache.py  clustering.py  common_cache.py  config.py  export.py  frozen_inputs.py  goa.py  idmapping.py  inputs.py  labels.py  mapping.py  mmseqs.py  models.py  ontology.py  pipeline.py  provenance.py  runtime_contract.py  splitting.py  uniref.py  validation.py
benchmark_builders/homology_cluster/tests/: helpers.py  test_array_launchers.py  test_attrition_policy.py  test_authorization.py  test_cli.py  test_cluster_cache.py  test_common_cache.py  test_config_inputs.py  test_disk_preflight.py  test_hpc_wrapper.py  test_labels.py  test_mmseqs.py  test_parsers.py  test_pipeline.py  test_provenance.py  test_runtime_contract.py  test_runtime_hpc_entrypoints.py  test_splitting.py  test_uniprot_scopes.py
benchmark_builders/homology_cluster/tests/fixtures/: clusters.tsv  go-mini.obo  (+4 more)
benchmark_forensics/: README.md  pyproject.toml
benchmark_forensics/src/pfp_benchmark_forensics/: __init__.py  analysis.py  cli.py  config.py  models.py  ontology.py  readers.py  reports.py
benchmark_forensics/tests/: test_forensics.py
benchmark_reuse_planner/: README.md  pyproject.toml
benchmark_reuse_planner/src/pfp_benchmark_reuse/: __init__.py  benchmark.py  cli.py  models.py  planner.py  reports.py
benchmark_reuse_planner/tests/: helpers.py  test_benchmark.py  test_planner.py  test_reports_and_cli.py
embedding_inventory/: README.md  pyproject.toml
embedding_inventory/src/pfp_embedding_inventory/: __init__.py  benchmark.py  cli.py  config.py  inventory.py  models.py  paths.py  provenance.py  reports.py
embedding_inventory/tests/: helpers.py  test_benchmark.py  test_config_and_regressions.py  test_inventory.py  test_provenance.py  test_real_integration.py
(+177 files in other folders)
