[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pfp-benchmark-forensics"
version = "0.1.0"
description = "Strict, reusable forensic characterization of PFP-compatible benchmarks"
requires-python = ">=3.9"
dependencies = ["pandas>=2.0"]

[project.scripts]
pfp-benchmark-forensics = "pfp_benchmark_forensics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
