[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contemporary-cafa-benchmark"
version = "0.2.0"
description = "Faithful CAFA-style temporal benchmark builder for PFP-compatible CSVs"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
]

[project.scripts]
cafa-benchmark-builder = "cafa_benchmark_builder.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cafa_benchmark_builder = ["resources/*.txt"]
